--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "skipLibCheck": true,
     "paths": {
-      "@xrpl-wallet/core": ["../core"],
-      "@xrpl-wallet/adaptors": ["../adaptors"]
+      "@xrpl-wallet/core": ["../packages/core"],
+      "@xrpl-wallet/adaptors": ["../packages/adaptors"]
     }
   }
 }
