add: XummAdaptor, add next.js example
- add isConnected to WalletAdaptor interface

--- a/examples/example/tsconfig.json
+++ b/examples/example/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "skipLibCheck": true,
     "paths": {
-      "@xrpl-wallet/core": ["../packages/core"],
-      "@xrpl-wallet/adaptors": ["../packages/adaptors"]
+      "@xrpl-wallet/core": ["../../packages/core"],
+      "@xrpl-wallet/adaptors": ["../../packages/adaptors"]
     }
   }
 }
