--- a/packages/adaptors/tsconfig.json
+++ b/packages/adaptors/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "CommonJS",
+    "outDir": "./dist",
+    "declaration": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "paths": {
-      "@xrplclient/core": ["../core"]
+      "@xrpl-walet/core": ["../core"]
     }
   }
 }
