add: @xrpl-wallet/react
- update example

--- a/examples/nextjs/tsconfig.json
+++ b/examples/nextjs/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@/*": ["./*"],
       "@xrpl-wallet/core": ["../../packages/core/dist"],
-      "@xrpl-wallet/adaptors": ["../../packages/adaptors/dist"]
+      "@xrpl-wallet/adaptors": ["../../packages/adaptors/dist"],
+      "@xrpl-wallet/react": ["../../packages/react/dist"]
 
     }
   },
