--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "@xrpl-wallet/adaptors": "workspace:*",
     "@xrpl-wallet/core": "workspace:*",
+    "@xrpl-wallet/react": "workspace:*",
     "autoprefixer": "10.4.15",
     "daisyui": "^3.5.1",
     "next": "13.4.19",
