--- a/packages/adaptors/package.json
+++ b/packages/adaptors/package.json
@@ -32,6 +32,12 @@
   },
   "dependencies": {
     "@crossmarkio/sdk": "0.2.5-beta",
+    "@walletconnect/sign-client": "^2.10.0",
+    "@walletconnect/types": "^2.10.0",
+    "@walletconnect/utils": "^2.10.0",
+    "@web3modal/standalone": "^2.4.3",
+    "@xrpl-walletconnect/core": "^0.1.0",
+    "ripple-binary-codec": "^1.9.0",
     "xrpl": "^2.7.0",
     "xumm": "^1.5.5"
   },
