--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
+    "lint": "eslint --cache --fix . && prettier --write **/*.{ts,tsx} **.config.{js}",
     "version": "lerna version --no-private",
     "publish": "lerna publish from-package"
   },
@@ -10,6 +11,13 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^6.6.2"
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "lerna": "^6.6.2",
+    "prettier": "^3.0.2"
   }
 }
