--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
-    "lint": "eslint --cache --fix . && prettier --write **/*.{ts,tsx} **.config.{js}",
+    "lint": "eslint --cache --fix . && prettier --write **/*.{ts,tsx,js}",
     "version": "lerna version --no-private",
     "publish": "lerna publish from-package"
   },
@@ -16,6 +16,8 @@
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "lerna": "^6.6.2",
     "prettier": "^3.0.2"
