--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc",
+    "build:watch": "vite build --watch && tsc --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -27,6 +28,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "10.4.15",
+    "daisyui": "^3.5.1",
+    "postcss": "8.4.28",
+    "tailwindcss": "3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
