--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,6 +12,9 @@
       "types": "./dist/types/index.d.ts"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc",
