--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,8 @@
     "dts": true
   },
   "dependencies": {
-    "xrpl-client": "2.1.1"
+    "xrpl-accountlib": "^3.0.0",
+    "xrpl-client": "2.2.0"
   },
   "publishConfig": {
     "access": "public"
