use xumm-pkce instead of xumm-universal-sdk

--- a/packages/adaptors/package.json
+++ b/packages/adaptors/package.json
@@ -43,7 +43,7 @@
     "@xrpl-walletconnect/core": "^0.1.0",
     "ripple-binary-codec": "^1.9.0",
     "xrpl": "^2.14.0",
-    "xumm": "^1.6.6"
+    "xumm-oauth2-pkce": "^2.8.5"
   },
   "publishConfig": {
     "access": "public"
